# libra

./: .gitignore  .pre-commit-config.yaml  =4.5  AGENT_ISSUES.md  AQUARIUS_AGENT_LEARNINGS.md  AQUARIUS_DESIGN_DOC.md  ARCHITECTURE_DECISIONS.md  EXECUTION_ORDER.md  EXECUTION_PLAN.md  FIRST_ISSUE.md  GITHUB_ISSUES_DRAFT.md  ISSUE_1_EXECUTION.md  ISSUE_EXECUTION_ORDER.md  LIBRA_DESIGN_DOC.md  Makefile  NAUTILUS_LEARNINGS.md  OPENBB_LEARNINGS.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  gateway_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py  bench_cache.py  bench_ewma.py  bench_full_cycle.py  bench_identifiers.py  bench_latency.py  bench_order_cache.py  bench_publish.py  bench_rust_message_bus.py  conftest.py
config/: risk_limits.yaml
docs/: extensible_protocols.md  plugin_development.md  strategy_development.md
docs/adr/: ADR-007-nexus-dependency-removal.md  ADR-008-python-free-threading.md  ADR-009-provider-fetcher-pattern.md
libra-core-rs/: .gitignore  Cargo.toml  README.md  pyproject.toml
libra-core-rs/benches/: ewma_benchmark.rs  kendall_benchmark.rs  message_bus_bench.rs
libra-core-rs/python/libra_core_rs/: __init__.py
libra-core-rs/src/: correlation.rs  ewma.rs  lib.rs  message_bus.rs  order_book.rs  var.rs
scripts/: benchmark_memory.py  check_memory_growth.py  init-questdb.sql  run_ibkr_tui.py  start-db.sh  test_ccxt_fetchers.py  test_tui_with_gateway.py
src/libra/: __init__.py
src/libra/api/: __init__.py  auth.py  deps.py  main.py  schemas.py
src/libra/api/routers/: __init__.py  audit.py  auth.py  market.py  orders.py  positions.py  strategies.py  system.py
src/libra/audit/: __init__.py  event_handler.py  exporters.py  logger.py  persistence.py  trail.py
src/libra/backtest/: __init__.py  engine.py  factors.py  fill_model.py  gateway.py  metrics.py  pipeline.py  result.py  vectorized.py
src/libra/clients/: __init__.py  backtest_data_client.py  backtest_execution_client.py  ccxt_data_client.py  ccxt_execution_client.py  data_client.py  execution_client.py
src/libra/core/: __init__.py  _rust.pyi  cache.py  clock.py  events.py  identifiers.py  kernel.py  message_bus.py  shared_cache.py  state_store.py
src/libra/data/: __init__.py  cache.py  catalog.py  config.py  downsample.py  protocol.py  questdb.py  schemas.py  storage.py
src/libra/execution/: __init__.py  adaptive.py  algorithm.py  emulator.py  engine.py  iceberg.py  metrics.py  pov.py  reconciliation.py  registry.py  twap.py  vwap.py
src/libra/gateways/: __init__.py  ccxt_fetchers.py  ccxt_gateway.py  fetcher.py  paper_gateway.py  protocol.py
src/libra/observability/: __init__.py  collector.py  health.py  memory.py  recorder.py  replayer.py  tracer.py
src/libra/plugins/: __init__.py  base.py  loader.py
src/libra/risk/: __init__.py  advanced_manager.py  circuit_breaker.py  correlation.py  engine.py  limits.py  manager.py  margin.py  position_sizing.py  rate_limiter.py  stress_testing.py  var.py
src/libra/signals/: __init__.py  aggregator.py  onchain.py  order_flow.py  prediction_market.py  protocol.py  stock_whale.py
src/libra/storage/: __init__.py  local.py  paths.py
src/libra/strategies/: __init__.py  actor.py  base.py  protocol.py  strategy.py
src/libra/tui/: __init__.py  __main__.py  app.py  demo_execution_client.py  demo_trader.py  spatial.py  styles.tcss
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  bench_gil_comparison.py
tests/compatibility/: __init__.py  test_free_threading.py
tests/e2e/: test_backtest_engine_real_data.py  test_client_architecture.py  test_client_real_data.py  test_data_management_real_data.py  test_execution_algorithms.py  test_execution_real_data.py  test_fetcher_real_data.py  test_finrl_adapter_real_data.py  test_freqtrade_adapter_real_data.py  test_hummingbot_e2e.py  test_openbb_gateway_real_data.py  test_risk_engine_real_data.py  test_trading_flow.py  test_unified_strategy_real_data.py
tests/integration/: __init__.py  test_actor_messagebus.py  test_bus_integration.py  test_ccxt_gateway.py  test_execution_engine.py  test_kernel_integration.py  test_risk_engine_integration.py  test_unified_strategy.py
tests/simulation/: test_exec_algo_simulation.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_api.py
tests/unit/audit/: __init__.py  test_audit.py
tests/unit/backtest/: __init__.py  test_engine.py  test_fill_model.py  test_metrics.py  test_pipeline.py  test_result.py  test_vectorized.py
tests/unit/clients/: __init__.py  test_protocols.py
tests/unit/core/: __init__.py  test_cache.py  test_clock.py  test_events.py  test_identifiers.py  test_kernel.py  test_message_bus.py  test_shared_cache.py  test_state_store.py
tests/unit/data/: __init__.py  test_bcolz_storage.py  test_catalog.py  test_config.py  test_data_cache.py  test_downsample.py  test_protocol.py  test_questdb.py  test_schemas.py  test_storage.py
tests/unit/execution/: __init__.py  test_algorithms.py  test_emulator.py  test_reconciliation.py  test_spawn_helpers.py
tests/unit/gateways/: __init__.py  test_fetcher.py  test_paper_gateway.py  test_protocol.py
tests/unit/observability/: __init__.py  test_collector.py  test_health.py  test_memory.py  test_recorder.py  test_replayer.py  test_tracer.py
tests/unit/plugins/: test_loader.py
tests/unit/risk/: __init__.py  test_advanced_risk.py  test_circuit_breaker.py  test_engine.py  test_instrument_status.py  test_limits.py  test_manager.py  test_position_sizing.py  test_quantity_limits.py  test_rate_limiter.py
tests/unit/signals/: __init__.py  test_order_flow.py  test_prediction_market.py  test_protocol.py  test_stock_whale.py
tests/unit/storage/: __init__.py  test_local.py
tests/unit/strategies/: __init__.py  test_actor.py  test_strategy.py
tests/unit/tui/: __init__.py  test_backtest_dashboard.py  test_dashboard_widgets.py  test_demo_trader.py  test_order_entry.py  test_reactive_prices.py  test_risk_dashboard.py  test_spatial.py  test_strategy_management.py
(+165 files in other folders)
