[project]
name = "libra"
version = "0.1.0"
description = "High-performance AI trading platform with LMAX Disruptor-inspired message bus"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Libra Team"}
]
keywords = ["trading", "algorithmic-trading", "message-bus", "async", "high-performance"]

dependencies = [
    # Core
    "lru-dict>=1.3",                           # 14x faster LRU cache (Issue #66)
    "cachetools>=5.3",                         # TTLCache for L2 tier (Issue #77)
    "numba>=0.59",                             # JIT compilation for numerical loops (Issue #70)
    "msgspec>=0.18",                           # Fast structs (4x faster than dataclass)
    "aiofiles>=24.1",                          # Async file I/O (Issue #73)
    "aiohttp>=3.9",                            # Async HTTP client
    "rich>=13.0",                              # Pretty terminal output
    "orjson>=3.10",                            # 10x faster JSON serialization
    "uvloop>=0.21; sys_platform != 'win32'",   # 2-4x faster asyncio (Unix only)
    "polars>=1.0",                             # 10-3500x faster than pandas
    "pyyaml>=6.0",                             # YAML config files
    # TUI (Issue #40)
    "textual>=7.0.0",                          # Terminal UI framework
    "textual-plotext>=1.0",                    # Charts in terminal
    # OpenBB Data Gateway (Issue #28)
    "openbb>=4.0",                             # OpenBB Platform v4+
    "openbb-yfinance>=1.0",                    # Yahoo Finance provider (free)
    "yfinance>=0.2.50,<0.2.60",                # Pin to version that works with curl-cffi 0.7
    "curl-cffi>=0.7,<0.8",                     # Pin to version with pre-built wheels
    # Exchange Connectivity (Issue #29)
    "ccxt>=4.0",                               # 100+ crypto exchanges
    # Stock Brokers (Issue #64)
    "ib_async>=1.0.0",                         # Interactive Brokers TWS API
    # Database (Issue #21)
    "questdb>=3.0",                            # QuestDB time-series
    "asyncpg>=0.29",                           # Async PostgreSQL
    # REST API (Issue #30)
    "fastapi>=0.115",                          # Web framework
    "uvicorn[standard]>=0.32",                 # ASGI server
    "python-jose[cryptography]>=3.3",          # JWT auth
    "passlib[bcrypt]>=1.7",                    # Password hashing
    "python-multipart>=0.0.9",                 # Form parsing
    # Web3/DEX (Issue #12)
    "web3>=6.0",                               # Ethereum interaction
    "eth-account>=0.11",                       # Account management
    # Prediction Markets (Issue #39)
    "py-clob-client>=0.18",                    # Polymarket CLOB trading
    "httpx>=0.27",                             # Async HTTP for prediction markets
    # Market Sessions (Issue #62)
    "exchange-calendars>=4.5",                 # Market hours & holidays (50+ exchanges)
    # State Persistence (Issue #85)
    "redis[hiredis]>=5.0",                     # Redis async client with C parser
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",   # Parallel test execution
    # Benchmarking
    "hdrhistogram>=0.10",  # High-precision latency histograms
    # Linting & Formatting
    "ruff>=0.8",
    "mypy>=1.8",
    # Pre-commit hooks
    "pre-commit>=3.6",
]

# Exchange connectivity plugins (Issue #29)
ccxt = [
    "ccxt>=4.0",
]

# Web3 - DEX connectivity for Hummingbot adapter (Issue #12)
web3 = [
    "web3>=6.0",              # Web3.py for Ethereum interaction
    "eth-account>=0.11",      # Account management
]

# All optional plugins (convenience install)
all-plugins = [
    "libra[ccxt,freqtrade,tui,database,api,web3,openbb,prediction-markets,alpaca,ibkr]",
]

# TUI - Terminal User Interface (v4.0+ required for Markdown streaming)
tui = [
    "textual>=7.0.0",       # v7.0 adds atom-one themes, v6.0 adds TextArea suggestions
    "textual-plotext>=1.0", # Plotext charts in Textual (Issue #40)
]

# OpenBB - Market data gateway (Issue #28)
openbb = [
    "openbb>=4.0",          # OpenBB Platform v4+
    "openbb-yfinance>=1.0", # Yahoo Finance provider (free, no API key)
]

# Future: validation (only at API boundaries)
validation = [
    "pydantic>=2.0",
]

# Database - QuestDB time-series database (Issue #21)
database = [
    "questdb>=3.0",      # QuestDB Python client (ILP ingestion)
    "asyncpg>=0.29",     # Async PostgreSQL driver (queries via PGWire)
]

# Freqtrade - Strategy adapter plugin (Issue #6 / Phase 2.1)
freqtrade = [
    "freqtrade>=2024.1",  # Freqtrade trading bot
    "technical>=1.4",      # Freqtrade indicator library
    "pandas>=2.0",         # Required for DataFrames
    "pandas-ta>=0.3.14b",  # Additional technical indicators
]

# REST API - FastAPI endpoints (Issue #30)
api = [
    "fastapi>=0.115",      # Modern web framework
    "uvicorn[standard]>=0.32",  # ASGI server with uvloop
    "python-jose[cryptography]>=3.3",  # JWT authentication
    "passlib[bcrypt]>=1.7",  # Password hashing
    "python-multipart>=0.0.9",  # Form parsing
]

# Prediction Markets - Polymarket trading (Issue #39)
prediction-markets = [
    "py-clob-client>=0.18",  # Polymarket CLOB API client
    "httpx>=0.27",           # Async HTTP client
]

# Alpaca - US Stocks & Options (Issue #61)
alpaca = [
    "alpaca-py>=0.30.0",     # Official Alpaca SDK
]

# Interactive Brokers - Institutional-grade trading (Issue #64)
ibkr = [
    "ib_async>=1.0.0",       # TWS API wrapper (successor to ib_insync)
]

# Stocks - All US stock trading plugins
stocks = [
    "libra[alpaca,ibkr,openbb]",  # Alpaca + IBKR execution + OpenBB data
]

[project.scripts]
libra = "libra.cli:main"

# Plugin entry points for strategy discovery (ADR-007)
[project.entry-points."libra.strategies"]
freqtrade = "libra.plugins.freqtrade_adapter:FreqtradeAdapter"
hummingbot = "libra.plugins.hummingbot_adapter:HummingbotAdapter"

# Gateway plugin entry points (Issue #29)
[project.entry-points."libra.gateways"]
paper = "libra.gateways.paper_gateway:PaperGateway"
ccxt = "libra.gateways.ccxt_gateway:CCXTGateway"
alpaca = "libra.gateways.alpaca:AlpacaGateway"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libra"]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show extra test summary
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks",
    "authenticated: marks tests requiring API keys (deselect with '-m \"not authenticated\"')",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",  # Async cleanup warnings
]

# =============================================================================
# pytest-benchmark
# =============================================================================
[tool.pytest-benchmark]
disable_gc = true
warmup = true
warmup_iterations = 1000
min_rounds = 30
max_time = 5.0
timer = "time.perf_counter_ns"

# =============================================================================
# ruff - Fast Python linter & formatter
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert (fine in tests)
    "PLR0913", # Too many arguments
    "TRY003",  # Long exception messages
    "COM812",  # Trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic values in tests are fine
]
"benchmarks/**/*.py" = [
    "S101",      # assert is fine in benchmarks
    "PLR2004",   # Magic values in benchmarks are fine
    "ARG001",    # Unused function args (handler signatures)
    "ARG002",    # Unused method args (fixtures for side-effects)
    "PLR0915",   # Too many statements (benchmark summaries)
]

[tool.ruff.lint.isort]
known-first-party = ["libra"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# mypy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "msgspec.*",
    "pytest.*",
    "pytest_asyncio.*",
    "pytest_benchmark.*",
    "orjson.*",
    "uvloop.*",
    "polars.*",
    "questdb.*",
    "asyncpg.*",
    "lru.*",
    "numba.*",
    "aiofiles.*",
    "redis.*",
]
ignore_missing_imports = true

# =============================================================================
# coverage
# =============================================================================
[tool.coverage.run]
source = ["src/libra"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@abstractmethod",
    "assert_never",
]
fail_under = 80
show_missing = true
