[package]
name = "libra-core-rs"
version = "0.1.0"
edition = "2021"
authors = ["LIBRA Contributors"]
description = "High-performance Rust core for LIBRA trading system"
license = "MIT"
repository = "https://github.com/windoliver/libra"
keywords = ["trading", "finance", "message-bus", "performance"]
categories = ["finance", "asynchronous"]

[lib]
name = "libra_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
parking_lot = "0.12"
fnv = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "message_bus_bench"
harness = false
