[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "libra-core-rs"
version = "0.1.0"
description = "High-performance Rust core for LIBRA trading platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["trading", "finance", "rust", "performance", "quant"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.4",
]

[project.urls]
Homepage = "https://github.com/windoliver/libra"
Repository = "https://github.com/windoliver/libra"
Issues = "https://github.com/windoliver/libra/issues"

[tool.maturin]
# Build settings
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "libra_core_rs.libra_core_rs"
strip = true

# Compatibility
compatibility = "manylinux2014"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
